<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"

        app:layout_constraintVertical_bias="0.5"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/action_tool_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dice_game_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"

            app:layout_constraintTop_toBottomOf="@id/txt_rules"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_rules">

            <TextView
                android:id="@+id/txt_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/initial_coins"
                android:textSize="18sp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_die"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_die"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_die_face"
                android:textSize="50sp"
                android:textColor="?attr/colorSecondary"
                android:background="?attr/colorPrimary"
                android:onClick="rollDie"


                android:layout_marginTop="20dp"

                app:layout_constraintTop_toBottomOf="@id/txt_coins"
                app:layout_constraintBottom_toTopOf="@id/txt_prev_roll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt_prev_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_prev_roll"

                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:padding="3dp"

                app:layout_constraintTop_toBottomOf="@id/btn_die"
                app:layout_constraintBottom_toTopOf="@id/single_sixes_total_rolls"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/single_sixes_total_rolls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginTop="20dp"

                app:layout_constraintTop_toBottomOf="@id/txt_prev_roll"
                app:layout_constraintBottom_toTopOf="@id/double_sixes_double_others"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/txt_single_sixes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/initial_sixes_rolled"
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/txt_total_rolls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="3dp"

                    android:text="@string/initial_total_rolls"

                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/double_sixes_double_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginTop="20dp"


                app:layout_constraintTop_toBottomOf="@id/single_sixes_total_rolls"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/txt_double_sixes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/initial_double_sixes"
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/green"/>

                <TextView
                    android:id="@+id/txt_double_others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/initial_double_others"
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:textColor="@color/red"

                    android:layout_marginStart="10dp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_rules"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/rules_string"
            android:textSize="18sp"
            android:ems="20"
            android:gravity="center"
            android:layout_marginStart="20dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>